* set max perm size to 256m also for efwlocal build